v0.2.5 - Unstable development revision
- Fix escaping of main menu items (includes method)
- Fix for custom nodes when using profiles
- Load skin-provided playlists and playlists from sub-folders
- Ability to browse a plugin from the management dialog
- Improved method of managing additional properties
- Method to list menu and submenus in a single include
- Library/playlists/addon/favourites loading code moved to separate module, loaded threaded
- Menu will now be rebuilt on skin or script version changes (includes method)

v0.2.4
- Fix listing individual groups with <include> method
- Parse favourites.xml directly
- Add XBMC Commands shortcut group
- Updated language files from Transifex

v0.2.2
- New optional method of listing shortcuts via includes file
- Option to allow user to browse for image or use playlist as background
- Option to allow user to choose playlist as widget
- Overrides and defaults now limitable by groupname
- Fix for custom video nodes
- Bug fixes and stability improvements
- Updated language files from Transifex

v0.2.0
- Removed check for settings shortcut (skins are now recommended to always provide alternative settings access)
- Video library shortcuts are loaded from video library node files (test)
- Video and music playlists are now grouped together
- Live TV renamed to PVR
- Support for managing widgets, backgrounds, custom properties
- Shortcuts with overriden images and override files are kept in memory to speed up listings
- Submenu shortcuts are now all loaded at once, with visibility conditions for switching lists
- Improved utf-8 support
- Bug fixes

v0.1.0
- Initial release